--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "devDependencies": {
     "babel-jest": "^22.0.3",
     "jest": "^22.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/renaldonoma/simple-kms-cryptor.git"    
   }
 }
