--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "aws-sdk": "^2.173.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "proxy-agent": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "^22.0.3",
@@ -26,6 +27,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/renaldonoma/simple-kms-cryptor.git"    
+    "url": "https://github.com/renaldonoma/simple-kms-cryptor.git"
   }
 }
